[ADD] adicionando bg-black no fundo das telas e instalando o ' @heroicons/react'

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@testing-library/react": "^14.1.2",
     "next": "14.0.3",
     "react": "^18",
